Fixes white space borders

--- a/src/Components/Models/ModelCard/ModelCard.scss
+++ b/src/Components/Models/ModelCard/ModelCard.scss
@@ -6,7 +6,7 @@
     padding: 20px;
     color: #fff;
     margin: 0;
-    border-radius: 3px 3px 0 0;
+    border-radius: 2px 2px 0 0;
     border-bottom: 1px solid var(--light-gray);
   }
 
